--- a/kkk.html
+++ b/kkk.html
@@ -5,6 +5,6 @@
 	<title> Je vide, j'achete</title>
 </head>
 <body style="background-color: #00FFFF">
- <h3> Bienvenu dans notre plateforme</h3>
+ <h3 style="color: #FFFFFF"> Bienvenu dans notre plateforme</h3>
 </body>
 </html>
