--- a/kkk.html
+++ b/kkk.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title> Je vide, j'achete</title>
 </head>
-<body style="background-color: #00FFFF">
+<body style="background-color: #008080">
  <h3 style="color: #FFFFFF"> Bienvenu dans notre plateforme</h3>
 </body>
 </html>
